# voice_agents_pipecat

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: generate_pipecat_slides.py
src/: main.py
src/flows/: flow_nodes.py  ordering.py  reservations.py
src/services/: common_nodes.py  menu.py  services.py  speech_format.py
