[project]
name = "voice-agents-pipecat"
version = "0.1.0"
description = "Bot de voz para pedidos de restaurante en una formación de Pipecat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.0",
    "loguru>=0.7.3",
    "pipecat-ai-flows>=0.0.22",
    "pipecat-ai[daily,deepgram,elevenlabs,openai,runner,silero,webrtc,websocket]>=0.0.105",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
]
